--- a/unicafe/src/index.css
+++ b/unicafe/src/index.css
@@ -4,6 +4,6 @@
 
 @layer components {
   .btn {
-    @apply px-6 py-2 bg-rose-400 rounded-md mr-4 text-white uppercase font-semibold tracking-wide shadow transition-colors text-sm hover:bg-rose-300 active:bg-rose-500 focus:outline-none focus:ring focus:ring-rose-400 focus:ring-offset-1 focus:ring-opacity-50;
+    @apply px-6 py-2 my-2 bg-rose-400 rounded-md mr-4 text-white uppercase font-semibold tracking-wide shadow transition-colors text-sm hover:bg-rose-300 active:bg-rose-500 focus:outline-none focus:ring focus:ring-rose-400 focus:ring-offset-1 focus:ring-opacity-50;
   }
 }
